curl: call libcurl_glue from fix. callback is not used yet

--- a/_sandbox/curl/Makefile
+++ b/_sandbox/curl/Makefile
@@ -1,8 +1,8 @@
 TOPDIR = ../..
-LIBS = -L . -d curl
+LIBS = -L . -d curl_glue -d curl
 
 %.out: %.fix
-	$(TOPDIR)/bin/fixautolink build -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $<
+	$(TOPDIR)/bin/fixautolink build -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $< -O separated
 %.run: %.fix
 	$(TOPDIR)/bin/fixautolink run -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $< -O separated
 
@@ -14,10 +14,11 @@ libcurl_test.out: libcurl_test.c
 libcurl_glue.so: libcurl_glue.c
 	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
 
-test: libcurl_test.out
-	./libcurl_test.out
+test: libcurl_glue.so curl_test1.out
+	LD_LIBRARY_PATH=. ./curl_test1.out
 
-test2: curl_test1.run
+test0: libcurl_test.out
+	./libcurl_test.out
 
 clean:
 	rm -f *.out *.so
