curl: wip: boxed_value corrupted

--- a/_sandbox/curl/Makefile
+++ b/_sandbox/curl/Makefile
@@ -15,7 +15,7 @@ libcurl_glue.so: libcurl_glue.c
 	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
 
 test: libcurl_glue.so curl_test1.out
-	LD_LIBRARY_PATH=. ./curl_test1.out
+	LD_LIBRARY_PATH=. MALLOC_PERTURB_=1 ./curl_test1.out
 
 test0: libcurl_test.out
 	./libcurl_test.out
