--- a/_sandbox/curl/Makefile
+++ b/_sandbox/curl/Makefile
@@ -6,22 +6,21 @@ LIBS = -L . -d curl_glue -d curl
 %.run: %.fix
 	$(TOPDIR)/bin/fixautolink run -o $@ -I $(TOPDIR)/lib -I . $(LIBS) -f $< -O separated
 
-all:
-
-libcurl_test.out: libcurl_test.c
-	gcc -o $@ $< -l curl
-
-libcurl_glue.so: libcurl_glue.c
-	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
+all: test
 
 test: libcurl_glue.so curl_test1.out
 	LD_LIBRARY_PATH=. MALLOC_PERTURB_=1 ./curl_test1.out
 
-test0: libcurl_test.out
-	./libcurl_test.out
+libcurl_glue.so: libcurl_glue.c
+	gcc $(INCLUDE) $(LIBPATH) -lcurl -shared -fPIC -o $@ $<
+
+#test0: libcurl_test.out
+#	./libcurl_test.out
+#libcurl_test.out: libcurl_test.c
+#	gcc -o $@ $< -l curl
 
 clean:
-	rm -f *.out *.so
+	rm -f *.out *.so tmp.*
 	rm -f .depend
 	fix clean
 
