change test.fix to import all test cases and run them all
The number of source files and test files is 139,
so `fix test` takes about 20 minutes to run.

--- a/fixproj.toml
+++ b/fixproj.toml
@@ -123,7 +123,7 @@ files = [
 ## Optimization level.
 ## One of "none", "minimum", "separated", "default".
 ## Overwritten by the command line argument.
-# opt_level = "default"
+opt_level = "separated"
 
 ## Output file name.
 ## Overwritten by the command line argument.
@@ -140,7 +140,67 @@ files = [
 ## Additional build options when running `fix test`.
 ## Available fields are almost the same as ones in "[build]".
 [build.test]
-files = ["tests/test.fix"]
+files = [
+"tests/test.fix",
+"tests/app/clap_test.fix",
+"tests/collection/deque_test.fix",
+"tests/collection/ordered_map_test.fix",
+"tests/collection/rbtree_test.fix",
+"tests/collection/tree_map_test.fix",
+"tests/collection/tree_set_test.fix",
+"tests/comonad/env_test.fix",
+"tests/comonad/identity_c_test.fix",
+"tests/comonad/traced_test.fix",
+"tests/crypto/aes/aes_gcm_test.fix",
+"tests/crypto/aes_test.fix",
+"tests/crypto/hmac_test.fix",
+"tests/crypto/md5_test.fix",
+"tests/crypto/sha1_test.fix",
+"tests/crypto/sha256_test.fix",
+"tests/crypto/sha512_test.fix",
+"tests/encoding/base64_test.fix",
+"tests/encoding/binary_test.fix",
+"tests/encoding/json_test.fix",
+"tests/encoding/xml/xml_helpers_test.fix",
+"tests/encoding/xml/xml_parser_test.fix",
+"tests/encoding/xml_test.fix",
+"tests/io/channel_test.fix",
+"tests/io/file_system_test.fix",
+"tests/io/path_test.fix",
+"tests/io/platform_test.fix",
+"tests/math/bigfloat_test.fix",
+"tests/math/bigint_prime_test.fix",
+"tests/math/bigint_test.fix",
+"tests/math/bignat_test.fix",
+"tests/math/complex_test.fix",
+"tests/math/euclid_test.fix",
+"tests/math/modular_test.fix",
+"tests/math/polynomial_test.fix",
+"tests/math/random_ex_test.fix",
+"tests/math/rational_test.fix",
+"tests/math/ring_test.fix",
+"tests/media/svg_test.fix",
+"tests/monad/cont_test.fix",
+"tests/monad/error_test.fix",
+"tests/monad/except_test.fix",
+"tests/monad/functor_m_test.fix",
+"tests/monad/identity_test.fix",
+"tests/monad/io_test.fix",
+"tests/monad/reader_test.fix",
+"tests/monad/state_test.fix",
+"tests/monad/writer_test.fix",
+"tests/net/html_test.fix",
+"tests/net/request_test.fix",
+"tests/net/router_test.fix",
+"tests/net/url_test.fix",
+"tests/text/hex_test.fix",
+"tests/text/regexp_test.fix",
+"tests/text/simple_parser_test.fix",
+"tests/text/string_ex_test.fix",
+"tests/text/unicode_test.fix",
+"tests/thread/task_pool_test.fix",
+"tests/trait/monoid_test.fix",
+]
 
 ## By "[[dependencies]]" array, you can specify a Fix project as a dependency.
 ## Each dependent project must have "fixproj.toml" file at the project root directory.
