change fixproj.toml so that `files` are empty

--- a/fixproj.toml
+++ b/fixproj.toml
@@ -18,86 +18,6 @@ license = "MIT"
 ## Fix source files to be compiled.
 ## Merged with files specified in the command line argument.
 files = [
-"lib/app/clap.fix",
-"lib/collection/deque.fix",
-"lib/collection/ordered_map.fix",
-"lib/collection/rbtree.fix",
-"lib/collection/tree_map.fix",
-"lib/collection/tree_set.fix",
-"lib/common/common.fix",
-"lib/comonad/env.fix",
-"lib/comonad/identity_c.fix",
-"lib/comonad/traced.fix",
-"lib/crypto/aes.fix",
-"lib/crypto/aes/aes_gcm.fix",
-"lib/crypto/hmac.fix",
-"lib/crypto/hmac/hmac_md5.fix",
-"lib/crypto/hmac/hmac_sha1.fix",
-"lib/crypto/hmac/hmac_sha256.fix",
-"lib/crypto/md5.fix",
-"lib/crypto/secure_random.fix",
-"lib/crypto/sha1.fix",
-"lib/crypto/sha256.fix",
-"lib/crypto/sha512.fix",
-"lib/encoding/base64.fix",
-"lib/encoding/binary.fix",
-"lib/encoding/json.fix",
-"lib/encoding/json/json_decoder.fix",
-"lib/encoding/json/json_encoder.fix",
-"lib/encoding/xml.fix",
-"lib/encoding/xml/xml_helpers.fix",
-"lib/encoding/xml/xml_parser.fix",
-"lib/io/channel.fix",
-"lib/io/errno.fix",
-"lib/io/file_system.fix",
-"lib/io/path.fix",
-"lib/io/platform.fix",
-"lib/math/bigfloat.fix",
-"lib/math/bigint.fix",
-"lib/math/bigint_prime.fix",
-"lib/math/bignat.fix",
-"lib/math/complex.fix",
-"lib/math/euclid.fix",
-"lib/math/modular.fix",
-"lib/math/polynomial.fix",
-"lib/math/random_ex.fix",
-"lib/math/rational.fix",
-"lib/math/ring.fix",
-"lib/math/types.fix",
-"lib/media/image.fix",
-"lib/media/png.fix",
-"lib/media/svg.fix",
-"lib/monad/cont.fix",
-"lib/monad/error.fix",
-"lib/monad/except.fix",
-"lib/monad/functor_m.fix",
-"lib/monad/identity.fix",
-"lib/monad/io.fix",
-"lib/monad/reader.fix",
-"lib/monad/state.fix",
-"lib/monad/trans.fix",
-"lib/monad/writer.fix",
-"lib/net/html.fix",
-"lib/net/http_server.fix",
-"lib/net/request.fix",
-"lib/net/router.fix",
-"lib/net/tcp.fix",
-"lib/net/url.fix",
-"lib/testing/test_util_array.fix",
-"lib/testing/unit_test.fix",
-"lib/text/hex.fix",
-"lib/text/regexp.fix",
-"lib/text/regexp/regexp_nfa.fix",
-"lib/text/regexp/regexp_pattern.fix",
-"lib/text/simple_parser.fix",
-"lib/text/string_ex.fix",
-"lib/text/unicode.fix",
-"lib/thread/future.fix",
-"lib/thread/task_pool.fix",
-"lib/thread/time.fix",
-"lib/trait/comonad.fix",
-"lib/trait/monoid.fix",
-"lib/trait/semigroup.fix",
 ]
 
 ## Object files to be linked.
@@ -139,8 +59,8 @@ files = [
 
 ## Additional build options when running `fix test`.
 ## Available fields are almost the same as ones in "[build]".
-[build.test]
-files = ["tests/test.fix"]
+#[build.test]
+# files = ["tests/test.fix"]
 
 ## By "[[dependencies]]" array, you can specify a Fix project as a dependency.
 ## Each dependent project must have "fixproj.toml" file at the project root directory.
