--- a/_sandbox/math/Makefile
+++ b/_sandbox/math/Makefile
@@ -4,8 +4,8 @@ FIXAUTOTEST = $(TOPDIR)/bin/fixautotest
 LIBS = -I $(TOPDIR)/lib -I .
 
 OPT = separated
-OPT_BUILD = -O $(OPT)
-OPT_RUN = -O $(OPT)
+OPT_BUILD = --opt-level $(OPT)
+OPT_RUN = --opt-level $(OPT)
 
 %.out: %.fix
 	$(FIXAUTOLINK) build -o $@ $(LIBS) -f $< $(OPT_BUILD)
