Add msgpack.fix to Sandbox (#55)
* kari

* msgpack: wip

* msgpack: impl Unpack, but not so good

* msgpack: update read_byte

* msgpack: use `catch` function

* msgpack: use marshal overall

* msgpack: impl unpack (wip)

* msgpack: impl unpack with cast from U64

* kari

* wip (update tests)

* update Makefile

--- a/_sandbox/Makefile
+++ b/_sandbox/Makefile
@@ -48,6 +48,8 @@ xml_test1:
 svg_test1:
 	../bin/fixautolink run -I ../lib -I . -f svg_test1.fix --opt-level minimum
 
+msgpack:
+	../bin/fixautolink run -L ../lib -L . -f msgpack.fix --opt-level separated
 clean:
 	rm -f *.out
 	rm -f .depend
