--- a/fixproj.toml
+++ b/fixproj.toml
@@ -18,6 +18,87 @@ license = "MIT"
 ## Fix source files to be compiled.
 ## Merged with files specified in the command line argument.
 files = [
+    "lib/app/clap.fix",
+"lib/collection/deque.fix",
+"lib/collection/ordered_map.fix",
+"lib/collection/rbtree.fix",
+"lib/collection/tree_map.fix",
+"lib/collection/tree_set.fix",
+"lib/common/common.fix",
+"lib/common/random_ex.fix",
+"lib/common/time_ex.fix",
+"lib/comonad/env.fix",
+"lib/comonad/identity_c.fix",
+"lib/comonad/traced.fix",
+"lib/crypto/aes.fix",
+"lib/crypto/aes/aes_gcm.fix",
+"lib/crypto/hmac.fix",
+"lib/crypto/hmac/hmac_md5.fix",
+"lib/crypto/hmac/hmac_sha1.fix",
+"lib/crypto/hmac/hmac_sha256.fix",
+"lib/crypto/md5.fix",
+"lib/crypto/secure_random.fix",
+"lib/crypto/sha1.fix",
+"lib/crypto/sha256.fix",
+"lib/crypto/sha512.fix",
+"lib/encoding/base64.fix",
+"lib/encoding/binary.fix",
+"lib/encoding/json.fix",
+"lib/encoding/json/json_decoder.fix",
+"lib/encoding/json/json_encoder.fix",
+"lib/encoding/xml.fix",
+"lib/encoding/xml/xml_helpers.fix",
+"lib/encoding/xml/xml_parser.fix",
+"lib/io/channel.fix",
+"lib/io/errno.fix",
+"lib/io/file_system.fix",
+"lib/io/path.fix",
+"lib/io/platform.fix",
+"lib/math/bigfloat.fix",
+"lib/math/bigint.fix",
+"lib/math/bigint_prime.fix",
+"lib/math/bignat.fix",
+"lib/math/complex.fix",
+"lib/math/euclid.fix",
+"lib/math/modular.fix",
+"lib/math/polynomial.fix",
+"lib/math/rational.fix",
+"lib/math/ring.fix",
+"lib/math/types.fix",
+"lib/media/image.fix",
+"lib/media/png.fix",
+"lib/media/svg.fix",
+"lib/monad/cont.fix",
+"lib/monad/error.fix",
+"lib/monad/except.fix",
+"lib/monad/functor_m.fix",
+"lib/monad/identity.fix",
+"lib/monad/io.fix",
+"lib/monad/reader.fix",
+"lib/monad/state.fix",
+"lib/monad/trans.fix",
+"lib/monad/writer.fix",
+"lib/net/html.fix",
+"lib/net/http_server.fix",
+"lib/net/request.fix",
+"lib/net/router.fix",
+"lib/net/tcp.fix",
+"lib/net/url.fix",
+"lib/testing/test_util_array.fix",
+"lib/testing/unit_test.fix",
+"lib/text/hex.fix",
+"lib/text/regexp.fix",
+"lib/text/regexp/regexp_nfa.fix",
+"lib/text/regexp/regexp_pattern.fix",
+"lib/text/simple_parser.fix",
+"lib/text/string_ex.fix",
+"lib/text/unicode.fix",
+"lib/thread/future.fix",
+"lib/thread/task_pool.fix",
+"lib/trait/comonad.fix",
+"lib/trait/monoid.fix",
+"lib/trait/semigroup.fix",
+
 ]
 
 ## Object files to be linked.
@@ -68,6 +149,7 @@ files = [
 "tests/collection/rbtree_test.fix",
 "tests/collection/tree_map_test.fix",
 "tests/collection/tree_set_test.fix",
+"tests/common/random_ex_test.fix",
 "tests/comonad/env_test.fix",
 "tests/comonad/identity_c_test.fix",
 "tests/comonad/traced_test.fix",
@@ -96,7 +178,6 @@ files = [
 "tests/math/euclid_test.fix",
 "tests/math/modular_test.fix",
 "tests/math/polynomial_test.fix",
-"tests/math/random_ex_test.fix",
 "tests/math/rational_test.fix",
 "tests/math/ring_test.fix",
 "tests/media/svg_test.fix",
