--- a/_projects/fixlang-minilib-thread/fixproj.toml
+++ b/_projects/fixlang-minilib-thread/fixproj.toml
@@ -12,6 +12,7 @@ files = [
 [build.test]
 opt_level = "separated"
 files = [
+    "tests/test.fix",
     "tests/thread/task_pool_test.fix",
 ]
 
@@ -19,6 +20,11 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+
+[[dependencies]]
+name = "minilib-io"
+version = "*"
+path = "../fixlang-minilib-io"
 
 [[dependencies]]
 name = "asynctask"
