--- a/_projects/fixlang-minilib-math/fixproj.toml
+++ b/_projects/fixlang-minilib-math/fixproj.toml
@@ -40,6 +40,11 @@ version = "*"
 path = "../fixlang-minilib-common"
 
 [[dependencies]]
+name = "minilib-binary"
+version = "*"
+path = "../fixlang-minilib-binary"
+
+[[dependencies]]
 name = "minilib-thread"
 version = "*"
 path = "../fixlang-minilib-thread"
