--- a/_projects/fixlang-minilib-json/fixproj.toml
+++ b/_projects/fixlang-minilib-json/fixproj.toml
@@ -23,6 +23,11 @@ version = "*"
 path = "../fixlang-minilib-common"
 
 [[dependencies]]
+name = "minilib-binary"
+version = "*"
+path = "../fixlang-minilib-binary"
+
+[[dependencies]]
 name = "minilib-text"
 version = "*"
 path = "../fixlang-minilib-text"
