--- a/_projects/fixlang-minilib-examples/Makefile
+++ b/_projects/fixlang-minilib-examples/Makefile
@@ -7,3 +7,8 @@ clean:
 	set -e && for dir in *; do \
 		[ ! -d $$dir ] || (echo $$dir && cd $$dir && fix clean && rm -rf *.out); \
 	done
+
+update:
+	set -e && for dir in *; do \
+		[ ! -d $$dir ] || (echo $$dir && cd $$dir && fix deps update); \
+	done
