_projects: io: update errno, change Destructor, deprecate `assert`

--- a/_projects/fixlang-minilib-io/fixproj.toml
+++ b/_projects/fixlang-minilib-io/fixproj.toml
@@ -17,6 +17,7 @@ opt_level = "separated"
 files = [
     "tests/test.fix",
     "tests/io/channel_test.fix",
+    "tests/io/errno_test.fix",
     "tests/io/file_system_test.fix",
     "tests/io/path_test.fix",
     "tests/io/platform_test.fix",
