--- a/_projects/Makefile
+++ b/_projects/Makefile
@@ -10,5 +10,9 @@ clean:
 
 update:
 	for d in fix*; do (cd $$d && if [ -f fixproj.toml ]; then fix deps update; fi); done
-#$(MAKE) -C fixlang-minilib-examples update
+	$(MAKE) -C fixlang-minilib-examples update
+
+document:
+	bash _gendoc.sh
+
 
