--- a/_projects/fixlang-minilib-json/fixproj.toml
+++ b/_projects/fixlang-minilib-json/fixproj.toml
@@ -21,18 +21,22 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-binary"
 version = "*"
 path = "../fixlang-minilib-binary"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
 
 [[dependencies]]
 name = "minilib-text"
 version = "*"
 path = "../fixlang-minilib-text"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
 
 [[dependencies]]
 name = "minilib-collection"
 version = "*"
 path = "../fixlang-minilib-collection"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
