--- a/_projects/fixlang-minilib-binary/fixproj.toml
+++ b/_projects/fixlang-minilib-binary/fixproj.toml
@@ -23,3 +23,4 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
