--- a/_projects/fixlang-minilib-comonad/fixproj.toml
+++ b/_projects/fixlang-minilib-comonad/fixproj.toml
@@ -24,8 +24,10 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-monad"
 version = "*"
 path = "../fixlang-minilib-monad"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
