--- a/_projects/fixlang-minilib-crypto/fixproj.toml
+++ b/_projects/fixlang-minilib-crypto/fixproj.toml
@@ -35,8 +35,10 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-binary"
 version = "*"
 path = "../fixlang-minilib-binary"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
