--- a/_projects/fixlang-minilib-examples/json_cat/fixproj.toml
+++ b/_projects/fixlang-minilib-examples/json_cat/fixproj.toml
@@ -13,13 +13,16 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-app"
 version = "*"
 path = "../../fixlang-minilib-app"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "minilib-json"
 version = "*"
 path = "../../fixlang-minilib-json"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-json.git" }
