--- a/_projects/fixlang-minilib-examples/probable_primes/fixproj.toml
+++ b/_projects/fixlang-minilib-examples/probable_primes/fixproj.toml
@@ -21,19 +21,23 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-app"
 version = "*"
 path = "../../fixlang-minilib-app"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "minilib-math"
 version = "*"
 path = "../../fixlang-minilib-math"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
 
 [[dependencies]]
 name = "minilib-thread"
 version = "*"
 path = "../../fixlang-minilib-thread"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-thread.git" }
 
