--- a/_projects/fixlang-minilib-examples/sudoku/fixproj.toml
+++ b/_projects/fixlang-minilib-examples/sudoku/fixproj.toml
@@ -13,21 +13,25 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-app"
 version = "*"
 path = "../../fixlang-minilib-app"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "minilib-xml"
 version = "*"
 path = "../../fixlang-minilib-xml"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-xml.git" }
 
 [[dependencies]]
 name = "minilib-media"
 version = "*"
 path = "../../fixlang-minilib-media"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-media.git" }
 
 [[dependencies]]
 name = "asynctask"
