--- a/_projects/fixlang-minilib-thread/fixproj.toml
+++ b/_projects/fixlang-minilib-thread/fixproj.toml
@@ -20,11 +20,13 @@ files = [
 name = "minilib-common"
 version = "*"
 path = "../fixlang-minilib-common"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-io"
 version = "*"
 path = "../fixlang-minilib-io"
+# git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
 
 [[dependencies]]
 name = "asynctask"
