--- a/_projects/fixlang-minilib-binary/fixproj.toml
+++ b/_projects/fixlang-minilib-binary/fixproj.toml
@@ -22,5 +22,5 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
