--- a/_projects/fixlang-minilib-comonad/fixproj.toml
+++ b/_projects/fixlang-minilib-comonad/fixproj.toml
@@ -23,11 +23,11 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-monad"
 version = "*"
-path = "../fixlang-minilib-monad"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+# path = "../fixlang-minilib-monad"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
