--- a/_projects/fixlang-minilib-crypto/fixproj.toml
+++ b/_projects/fixlang-minilib-crypto/fixproj.toml
@@ -34,11 +34,11 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-binary"
 version = "*"
-path = "../fixlang-minilib-binary"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
+# path = "../fixlang-minilib-binary"
+git = { url = "https://github.com/pt9999/fixlang-minilib-binary.git" }
