--- a/_projects/fixlang-minilib-examples/grep/fixproj.toml
+++ b/_projects/fixlang-minilib-examples/grep/fixproj.toml
@@ -12,17 +12,17 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-app"
 version = "*"
-path = "../../fixlang-minilib-app"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
+# path = "../../fixlang-minilib-app"
+git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "minilib-regexp"
 version = "*"
-path = "../../fixlang-minilib-regexp"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-regexp.git" }
+# path = "../../fixlang-minilib-regexp"
+git = { url = "https://github.com/pt9999/fixlang-minilib-regexp.git" }
