--- a/_projects/fixlang-minilib-examples/probable_primes/fixproj.toml
+++ b/_projects/fixlang-minilib-examples/probable_primes/fixproj.toml
@@ -20,24 +20,24 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-app"
 version = "*"
-path = "../../fixlang-minilib-app"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
+# path = "../../fixlang-minilib-app"
+git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 
 [[dependencies]]
 name = "minilib-math"
 version = "*"
-path = "../../fixlang-minilib-math"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
+# path = "../../fixlang-minilib-math"
+git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
 
 [[dependencies]]
 name = "minilib-thread"
 version = "*"
-path = "../../fixlang-minilib-thread"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-thread.git" }
+# path = "../../fixlang-minilib-thread"
+git = { url = "https://github.com/pt9999/fixlang-minilib-thread.git" }
 
