--- a/_projects/fixlang-minilib-monad/fixproj.toml
+++ b/_projects/fixlang-minilib-monad/fixproj.toml
@@ -36,5 +36,5 @@ files = [
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../fixlang-minilib-common"
-# git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+# path = "../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
