--- a/registry.toml
+++ b/registry.toml
@@ -1,39 +1,68 @@
 [[projects]]
-name = "asynctask"
-git = "https://github.com/tttmmmyyyy/fixlang-asynctask.git"
+name = "minilib-app"
+git = "https://github.com/pt9999/fixlang-minilib-app.git"
 
 [[projects]]
-name = "character"
-git = "https://github.com/tttmmmyyyy/fixlang-character.git"
+name = "minilib-binary"
+git = "https://github.com/pt9999/fixlang-minilib-binary.git"
 
 [[projects]]
-name = "hash"
-git = "https://github.com/tttmmmyyyy/fixlang-hash.git"
+name = "minilib-collection"
+git = "https://github.com/pt9999/fixlang-minilib-collection.git"
 
 [[projects]]
-name = "hashmap"
-git = "https://github.com/tttmmmyyyy/fixlang-hashmap.git"
+name = "minilib-common"
+git = "https://github.com/pt9999/fixlang-minilib-common.git"
 
 [[projects]]
-name = "hashset"
-git = "https://github.com/tttmmmyyyy/fixlang-hashset.git"
+name = "minilib-comonad"
+git = "https://github.com/pt9999/fixlang-minilib-comonad.git"
 
 [[projects]]
-name = "math"
-git = "https://github.com/tttmmmyyyy/fixlang-math.git"
+name = "minilib-crypto"
+git = "https://github.com/pt9999/fixlang-minilib-crypto.git"
 
 [[projects]]
-name = "random"
-git = "https://github.com/tttmmmyyyy/fixlang-random.git"
+name = "minilib-examples"
+git = "https://github.com/pt9999/fixlang-minilib-examples.git"
 
 [[projects]]
-name = "regexp"
-git = "https://github.com/tttmmmyyyy/fixlang-regexp.git"
+name = "minilib-io"
+git = "https://github.com/pt9999/fixlang-minilib-io.git"
 
 [[projects]]
-name = "subprocess"
-git = "https://github.com/tttmmmyyyy/fixlang-subprocess.git"
+name = "minilib-json"
+git = "https://github.com/pt9999/fixlang-minilib-json.git"
 
 [[projects]]
-name = "time"
-git = "https://github.com/tttmmmyyyy/fixlang-time.git"
+name = "minilib-math"
+git = "https://github.com/pt9999/fixlang-minilib-math.git"
+
+[[projects]]
+name = "minilib-media"
+git = "https://github.com/pt9999/fixlang-minilib-media.git"
+
+[[projects]]
+name = "minilib-monad"
+git = "https://github.com/pt9999/fixlang-minilib-monad.git"
+
+[[projects]]
+name = "minilib-net"
+git = "https://github.com/pt9999/fixlang-minilib-net.git"
+
+[[projects]]
+name = "minilib-regexp"
+git = "https://github.com/pt9999/fixlang-minilib-regexp.git"
+
+[[projects]]
+name = "minilib-text"
+git = "https://github.com/pt9999/fixlang-minilib-text.git"
+
+[[projects]]
+name = "minilib-thread"
+git = "https://github.com/pt9999/fixlang-minilib-thread.git"
+
+[[projects]]
+name = "minilib-xml"
+git = "https://github.com/pt9999/fixlang-minilib-xml.git"
+
