--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,11 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@main
+      with:
+        submodules: 'recursive'
 
     - name: List directory
-      run: ls -la
+      run: ls -la _projects
 
     - name: Run tests and make examples
-      run: docker run --pull always --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test examples
+      run: docker run --pull always --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test -C _projects
