--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,11 @@ jobs:
     - name: List directory
       run: ls -la _projects
 
-    - name: Run tests and make examples
-      run: docker run --pull always --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test -C _projects
+    - name: Pull the docker image for CI
+      run: docker pull pt9999/fixlang_minilib_ci
+
+    - name: Run test codes
+      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test -C _projects
+
+    - name: Build example programs
+      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make examples -C _projects
