--- a/_sandbox/math/fixproj.toml
+++ b/_sandbox/math/fixproj.toml
@@ -9,7 +9,8 @@ opt_level = "separated"
 
 [[dependencies]]
 name = "minilib-math"
-version = "*"
+version = "~0.1.1"
+#path = "../../_projects/fixlang-minilib-math"
 git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
 
 [[dependencies]]
