--- a/_projects/_depgraph/fixproj.toml
+++ b/_projects/_depgraph/fixproj.toml
@@ -1,32 +1,23 @@
 [general]
 name = "depgraph"
-version = "0.1.0"
+version = "0.2.0"
 
 [build]
 files = ["proj_depgraph.fix"]
 opt_level = "separated"
 
+
 [[dependencies]]
 name = "minilib-common"
 version = "*"
-path = "../fixlang-minilib-common"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-io"
 version = "*"
-path = "../fixlang-minilib-io"
+git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
 
 [[dependencies]]
 name = "minilib-monad"
 version = "*"
-path = "../fixlang-minilib-monad"
-
-#[[dependencies]]
-#name = "minilib-math"
-#version = "*"
-#path = "../fixlang-minilib-math"
-
-#[[dependencies]]
-#name = "minilib-crypto"
-#version = "*"
-#path = "../fixlang-minilib-crypto"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
