update github text-crypto workflow

--- a/.github/workflows/test-crypto.yml
+++ b/.github/workflows/test-crypto.yml
@@ -10,7 +10,14 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@main
+      with:
+        submodules: 'recursive'
 
-    - name: Run tests
-      run: docker run --pull always --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test-crypto
+    - name: Pull the docker image for CI
+      run: docker pull pt9999/fixlang_minilib_ci
 
+    - name: Run test codes
+      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make test -C _sandbox/crypto/fixlang-minilib-tls
+
+    - name: Build example programs
+      run: docker run --rm -v .:/work -w /work pt9999/fixlang_minilib_ci make examples -C _sandbox/crypto/fixlang-minilib-tls
