_sandbox: update crypto

--- a/_sandbox/crypto/Makefile
+++ b/_sandbox/crypto/Makefile
@@ -1,8 +1,10 @@
-CRYPTO_DIR = .
-SUBDIRS = cipher cert tls https
+all:
 
-include $(CRYPTO_DIR)/Makefile.inc
--include .depend
-
-document:
-	$(TOPDIR)/bin/fixdoc -i . -o .local/doc
+test:
+	fix run -f aes_gcm_test1.fix
+	fix run -f aes_gcmvs.fix
+	fix run -f aes_test1.fix
+	fix run -f cipher_test1.fix cipher.fix
+	fix run -f md5_test1.fix
+	fix run -f pkcs5_test1.fix
+	fix run -f secure_random_test1.fix
