--- a/_sandbox/crypto/fixproj.toml
+++ b/_sandbox/crypto/fixproj.toml
@@ -25,3 +25,14 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-crypto.git" }
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+
+
+[[dependencies]]
+name = "minilib-monad"
+version = "*"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "asynctask"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
