--- a/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
+++ b/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
@@ -37,7 +37,6 @@ files = [
     "lib/crypto/cipher/rsa/rsa_public_key.fix",
     "lib/crypto/tls/aead.fix",
     "lib/crypto/tls/alert.fix",
-    "lib/crypto/tls/bytes_io.fix",
     "lib/crypto/tls/cipher_suite.fix",
     "lib/crypto/tls/ecdhe.fix",
     "lib/crypto/tls/extensions.fix",
@@ -54,6 +53,7 @@ files = [
     "lib/crypto/tls/tls_session_mock.fix",
     "lib/crypto/tls/tls_socket.fix",
     "lib/crypto/tls/types.fix",
+    "lib/monad/bytes_io.fix",
     "lib/monad/random.fix",
     "lib/net/http_client.fix",
     "lib/net/http_client/response_parser.fix",
