add submodule fixlang-minilib-random

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "_projects/fixlang-minilib-xml"]
 	path = _projects/fixlang-minilib-xml
 	url = https://github.com/pt9999/fixlang-minilib-xml
+[submodule "_projects/fixlang-minilib-random"]
+	path = _projects/fixlang-minilib-random
+	url = https://github.com/pt9999/fixlang-minilib-random.git
