add fixlang-minilib-random as subproject

--- a/_projects/Makefile
+++ b/_projects/Makefile
@@ -7,6 +7,7 @@ SUBPROJECTS = \
 	fixlang-minilib-text \
 	fixlang-minilib-monad \
 	fixlang-minilib-comonad \
+	fixlang-minilib-random \
 	fixlang-minilib-collection \
 	fixlang-minilib-crypto \
 	fixlang-minilib-io \
