--- a/registry.toml
+++ b/registry.toml
@@ -51,6 +51,10 @@ name = "minilib-net"
 git = "https://github.com/pt9999/fixlang-minilib-net.git"
 
 [[projects]]
+name = "minilib-random"
+git = "https://github.com/pt9999/fixlang-minilib-random.git"
+
+[[projects]]
 name = "minilib-text"
 git = "https://github.com/pt9999/fixlang-minilib-text.git"
 
