--- a/_projects/_depgraph/fixproj.toml
+++ b/_projects/_depgraph/fixproj.toml
@@ -3,7 +3,10 @@ name = "depgraph"
 version = "0.2.0"
 
 [build]
-files = ["proj_depgraph.fix"]
+files = [
+    "main.fix",
+    "depgraph.fix",
+]
 opt_level = "separated"
 
 
@@ -21,3 +24,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
 name = "minilib-monad"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
+
+[[dependencies]]
+name = "minilib-collection"
+version = "0.2.1"
+git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
