_sandbox: container: add ring_buffer2.fix

--- a/_sandbox/container/fixproj.toml
+++ b/_sandbox/container/fixproj.toml
@@ -85,3 +85,8 @@ files = []
 name = "binary-heap"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-binary-heap.git" }
+
+[[dependencies]]
+name = "minilib-common"
+version = "0.3.0"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
