_sandbox: terminal: add lib.c (wip)

--- a/_sandbox/terminal/fixproj.toml
+++ b/_sandbox/terminal/fixproj.toml
@@ -7,6 +7,8 @@ files = [
     "terminal.fix",
 ]
 opt_level = "separated"
+objects = ["lib.o"]
+preliminary_commands = [["make", "lib.o"]]
 
 [[dependencies]]
 name = "minilib-common"
