_sandbox: terminal: update ncurses (wip)

--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -11,3 +11,9 @@ objects = ["lib.o"]
 preliminary_commands = [["make", "lib.o"]]
 dynamic_links = ["ncursesw"]
 
+
+
+[[dependencies]]
+name = "subprocess"
+version = "1.0.0"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
