_sandbox: terminal: update ncurses (wip)

--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -17,3 +17,8 @@ dynamic_links = ["ncursesw"]
 name = "subprocess"
 version = "1.0.0"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
+
+[[dependencies]]
+name = "minilib-io"
+version = "0.3.3"
+git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
