_sandbox: crypto: tls: use montgomery for ecdsa

--- a/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
+++ b/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
@@ -54,6 +54,7 @@ files = [
     "lib/crypto/tls/tls_socket.fix",
     "lib/crypto/tls/types.fix",
     "lib/monad/bytes_io.fix",
+    "lib/math/montgomery.fix",
     "lib/net/http_client.fix",
     "lib/net/http_client/response_parser.fix",
 ]
