_sandbox: math: update deps, minilib-math was version locked

--- a/_sandbox/math/fixproj.toml
+++ b/_sandbox/math/fixproj.toml
@@ -9,8 +9,7 @@ opt_level = "separated"
 
 [[dependencies]]
 name = "minilib-math"
-version = "~0.1.1"
-#path = "../../_projects/fixlang-minilib-math"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-math.git" }
 
 [[dependencies]]
