--- a/_sandbox/terminal/ncurses/fixproj.toml
+++ b/_sandbox/terminal/ncurses/fixproj.toml
@@ -15,11 +15,11 @@ dynamic_links = ["ncursesw"]
 
 
 [[dependencies]]
-name = "subprocess"
-version = "1.0.0"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
+name = "minilib-io"
+version = "*"
+git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
 
 [[dependencies]]
-name = "minilib-io"
-version = "0.3.3"
-git = { url = "https://github.com/pt9999/fixlang-minilib-io.git" }
+name = "minilib-monad"
+version = "*"
+git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
