_sandbox: crypto: tls: use `fix test` instead of bash for-loop

--- a/_sandbox/crypto/fixlang-minilib-tls/Makefile
+++ b/_sandbox/crypto/fixlang-minilib-tls/Makefile
@@ -3,9 +3,10 @@
 all:
 
 test:
-	set -e && for f in $$(find tests -name "*_test.fix" | sort); do \
-		echo "=== $$f ===" && fix run -f $$f; \
-	done
+	fix test
+#set -e && for f in $$(find tests -name "*_test.fix" | sort); do \
+#	echo "=== $$f ===" && fix run -f $$f; \
+#done
 
 examples:
 	fix build -f examples/sample_https_client.fix -o examples/sample_https_client.out
