--- a/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
+++ b/_sandbox/crypto/fixlang-minilib-tls/fixproj.toml
@@ -62,7 +62,7 @@ opt_level = "separated"
 
 [build.test]
 files = [
-
+    "tests/test.fix"
 ]
 opt_level = "separated"
 
@@ -126,3 +126,8 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-app.git" }
 name = "minilib-net"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-net.git" }
+
+[[dependencies]]
+name = "subprocess"
+version = "1.0.0"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-subprocess.git" }
