--- a/_sandbox/fp/fixproj.toml
+++ b/_sandbox/fp/fixproj.toml
@@ -31,3 +31,8 @@ git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
 name = "minilib-comonad"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-comonad.git" }
+
+[[dependencies]]
+name = "fast-iter"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-fast-iter.git" }
